Corrected EditText Flaw

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="text"
         android:layout_marginTop="8dp"
         android:background="@drawable/text_view"
         android:drawableLeft="@drawable/usernamepic"
@@ -81,6 +85,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:drawableStart="@drawable/lock"
