--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -19,6 +19,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="back"
         android:background="@drawable/back_button"
         android:src="@drawable/arrow_back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +40,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="104dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="text"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
         android:hint="Shop's Name"
@@ -64,6 +69,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="text"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
         android:hint="Username"
@@ -87,6 +96,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="textEmailAddress"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
         android:hint="Email ID"
@@ -110,10 +123,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="textPassword"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
         android:hint="Password"
-        android:inputType="textPassword"
         android:paddingBottom="15dp"
         android:paddingEnd="15dp"
         android:paddingLeft="24dp"
@@ -134,10 +150,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/text_view"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:inputType="textPassword"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
         android:hint="Confirm Password"
-        android:inputType="textPassword"
         android:paddingBottom="15dp"
         android:paddingEnd="15dp"
         android:paddingLeft="24dp"
