--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,19 +56,19 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="text"
         android:layout_marginTop="8dp"
         android:background="@drawable/text_view"
         android:drawableLeft="@drawable/usernamepic"
         android:drawablePadding="10dp"
         android:drawableStart="@drawable/usernamepic"
         android:elevation="4dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Username"
+        android:inputType="text"
+        android:maxLines="1"
         android:padding="15dp"
+        android:scrollHorizontally="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,17 +85,17 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="10dp"
         android:drawableStart="@drawable/lock"
         android:elevation="4dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Password"
         android:inputType="textPassword"
+        android:maxLines="1"
         android:padding="15dp"
+        android:scrollHorizontally="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,13 +116,14 @@
         android:background="@drawable/button"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
+        android:onClick="login"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="1.0" />
@@ -148,10 +149,54 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toEndOf="@+id/login"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="1.0" />
+
+    <CheckBox
+        android:id="@+id/owner"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/actor"
+        android:text="Owner"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:theme="@style/CheckBoxTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.34"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        app:layout_constraintVertical_bias="0.36" />
+
+    <CheckBox
+        android:id="@+id/staff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/actor"
+        android:text="Staff"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:theme="@style/CheckBoxTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toEndOf="@+id/owner"
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        app:layout_constraintVertical_bias="0.356" />
 
 
 </android.support.constraint.ConstraintLayout>
