--- a/app/src/main/res/menu/pharmacy_menu.xml
+++ b/app/src/main/res/menu/pharmacy_menu.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/setting" android:title="Settings" />
-    <item android:id="@+id/setting2" android:title="Settings" />
-    <item android:id="@+id/setting3" android:title="Settings" />
-    <item android:id="@+id/setting4" android:title="Settings" />
-    <item android:id="@+id/setting5" android:title="Settings" />
+    <item android:id="@+id/settings"
+        android:title="Settings" />
+    <item android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
 </menu>
