--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3d3d5c</color>
     <color name="colorAccent">#1a53ff</color>
     <color name="textColor">#ffffff</color>
+    <color name="ripple_color">#b3c6ff</color>
 </resources>
