--- a/app/src/main/res/layout/activity_online_pharmacy.xml
+++ b/app/src/main/res/layout/activity_online_pharmacy.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".OnlinePharmacy">
+    android:fitsSystemWindows="true">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/main_content" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        app:itemTextColor="#ffffff"
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"
+        app:theme="@style/NavigationDrawerStyle" />
+
+</android.support.v4.widget.DrawerLayout>
