--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+        <item android:title="Find Medicine" />
+        <item android:title="Add Medicine" />
+        <item android:title="Delete Medicine" />
         <item android:title="Settings" />
+        <item android:title="Logout" />
     </group>
 
 </menu>
