--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,16 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="?attr/colorPrimary"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
+    android:paddingBottom="16dp"
     android:gravity="bottom">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_person"
-        />
+        android:layout_height="109dp"
+        android:src="@drawable/person" />
+    <TextView
+        android:layout_width="match_parent"
+        android:textColor="#ffffff"
+        android:text="Username"
+        android:paddingTop="12dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
