--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#47476b</color>
     <color name="colorPrimaryDark">#3d3d5c</color>
+    <color name="colorPrimaryLight">#5c5c8a</color>
     <color name="colorAccent">#1a53ff</color>
     <color name="textColor">#ffffff</color>
     <color name="ripple_color">#b3c6ff</color>
