--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,12 +27,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">#ffffff</item>
-        <item name="android:textColorSecondary">#ffffff</item>
-        <item name="android:actionMenuTextColor">#ffffff</item>
+        <item name="android:itemBackground">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:textColorSecondary">#fff</item>
+        <item name="android:actionMenuTextColor">#fff</item>
     </style>
 
     <style name="NavigationDrawerStyle">
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">16sp</item><!-- text size in menu-->
         <item name="android:listPreferredItemHeightSmall">40dp</item><!-- item size in menu-->
         <item name="listPreferredItemHeightSmall">40dp</item><!-- item size in menu-->
