--- a/app/src/main/res/layout/medicine_information.xml
+++ b/app/src/main/res/layout/medicine_information.xml
@@ -100,6 +100,7 @@
             android:src="@drawable/ic_remove" />
 
         <EditText
+            android:id="@+id/total_number_of_medicines"
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
