--- a/app/src/main/res/layout/medicine_information.xml
+++ b/app/src/main/res/layout/medicine_information.xml
@@ -7,6 +7,7 @@
     android:clickable="true"
     android:background="@drawable/medicine_information_styler"
     android:elevation="4dp"
+    tools:showIn="@layout/main_content"
     android:padding="8dp" >
 
     <TextView
