--- a/app/src/main/res/layout/medicine_information.xml
+++ b/app/src/main/res/layout/medicine_information.xml
@@ -181,7 +181,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="2dp"
-        android:background="@drawable/button"
+        android:background="@drawable/addtocart_button_styler"
         android:elevation="4dp"
         android:text="Add to Cart"
         android:textAllCaps="false"
