--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -30,7 +30,10 @@
         android:elevation="4dp"
         android:id="@+id/constraintSearchHolder"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:layout_editor_absoluteX="0dp">
+        <requestFocus />
 
         <EditText
             android:id="@+id/search_edittext"
