--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -7,7 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".SignupPage">
+    <requestFocus />
 
     <ImageButton
         android:id="@+id/back"
@@ -32,151 +35,147 @@
     <EditText
         android:id="@+id/shopname"
         android:layout_width="322dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="472dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="text"
         android:elevation="4dp"
+        android:drawableStart="@drawable/ic_home"
+        android:drawableLeft="@drawable/ic_home"
+        android:drawablePadding="10dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Shop's Name"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="15dp"
-        android:paddingStart="24dp"
-        android:paddingTop="15dp"
+        android:inputType="text"
+        android:maxLines="1"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.48000002" />
 
     <EditText
         android:id="@+id/ownername"
         android:layout_width="322dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="text"
         android:elevation="4dp"
+        android:drawableStart="@drawable/usernamepic"
+        android:drawableLeft="@drawable/usernamepic"
+        android:drawablePadding="10dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
-        android:hint="Username"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="15dp"
-        android:paddingStart="24dp"
-        android:paddingTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Your Name"
+        android:inputType="textVisiblePassword"
+        android:maxLines="1"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
+        app:layout_constraintEnd_toEndOf="@+id/shopname"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/shopname"
         app:layout_constraintTop_toBottomOf="@+id/shopname" />
 
     <EditText
         android:id="@+id/emailid"
         android:layout_width="322dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="textEmailAddress"
         android:elevation="4dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Email ID"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="15dp"
-        android:paddingStart="24dp"
-        android:paddingTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textVisiblePassword"
+        android:maxLines="1"
+        android:drawableStart="@drawable/ic_email"
+        android:drawableLeft="@drawable/ic_email"
+        android:drawablePadding="10dp"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
+        app:layout_constraintEnd_toEndOf="@+id/ownername"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/ownername"
         app:layout_constraintTop_toBottomOf="@+id/ownername" />
+
+    <EditText
+        android:id="@+id/owner_username"
+        android:layout_width="322dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/text_view"
+        android:elevation="4dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/actor"
+        android:hint="Username"
+        android:inputType="text"
+        android:maxLines="1"
+        android:drawableStart="@drawable/usernamepic"
+        android:drawableLeft="@drawable/usernamepic"
+        android:drawablePadding="10dp"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
+        app:layout_constraintEnd_toEndOf="@+id/emailid"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/emailid"
+        app:layout_constraintTop_toBottomOf="@+id/emailid" />
 
     <EditText
         android:id="@+id/signup_password"
         android:layout_width="322dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="textPassword"
         android:elevation="4dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Password"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="15dp"
-        android:paddingStart="24dp"
-        android:paddingTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailid" />
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:drawableStart="@drawable/lock"
+        android:drawableLeft="@drawable/lock"
+        android:drawablePadding="10dp"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
+        app:layout_constraintEnd_toEndOf="@+id/owner_username"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/owner_username"
+        app:layout_constraintTop_toBottomOf="@+id/owner_username" />
 
     <EditText
         android:id="@+id/signup_confirm_password"
         android:layout_width="322dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/text_view"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:inputType="textPassword"
         android:elevation="4dp"
+        android:ellipsize="end"
         android:fontFamily="@font/actor"
         android:hint="Confirm Password"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="15dp"
-        android:paddingStart="24dp"
-        android:paddingTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:drawableStart="@drawable/lock"
+        android:drawableLeft="@drawable/lock"
+        android:drawablePadding="10dp"
+        android:padding="15dp"
+        android:scrollHorizontally="true"
+        app:layout_constraintEnd_toEndOf="@+id/signup_password"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/signup_password"
         app:layout_constraintTop_toBottomOf="@+id/signup_password" />
 
     <Button
         android:id="@+id/register_button"
         android:layout_width="126dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button"
         android:elevation="4dp"
         android:fontFamily="@font/actor"
@@ -185,8 +184,22 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/signup_confirm_password"
+        app:layout_constraintStart_toStartOf="@+id/signup_confirm_password"
         app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/actor"
+        android:text="Register"
+        android:textColor="#ffff"
+        android:textSize="22sp"
+        app:layout_constraintStart_toEndOf="@+id/back"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
