--- a/app/src/main/res/drawable/edit_button.xml
+++ b/app/src/main/res/drawable/edit_button.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/ripple_color" >
+    android:color="@color/ripple_color">
 
     <item>
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <solid android:color="@color/colorPrimary" />
-            <stroke android:width="2dp" android:color="#ffff" />
         </shape>
     </item>
 
