--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,11 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:title="Find Medicine" />
-        <item android:title="Add Medicine" />
-        <item android:title="Delete Medicine" />
-        <item android:title="Settings" />
-        <item android:title="Logout" />
+        <item android:id="@+id/account_item" android:title="Account" />
+        <item android:id="@+id/settings_item" android:title="Settings" />
+        <item android:id="@+id/logout_item" android:title="Logout" />
     </group>
 
 </menu>
