--- a/app/src/main/res/menu/pharmacy_menu.xml
+++ b/app/src/main/res/menu/pharmacy_menu.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/settings"
+        android:orderInCategory="100"
         android:title="Settings" />
+
+    <item android:id="@+id/notification"
+        android:icon="@drawable/ic_notifications"
+        android:orderInCategory="200"
+        app:showAsAction="always"
+        />
 
 </menu>
